--- a/.github/workflows/testing_surge.yml
+++ b/.github/workflows/testing_surge.yml
@@ -28,4 +28,8 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./ bootcamptestapp.surge.sh --token ${{secrets.SURGE_TOKENTEST}}
+      run: surge ./ bootcamptest01.surge.sh --token ${{secrets.SURGE_TOKENTEST}}
+  
+  
+  
+  
